Restructure Resource Generation
* put generated resources under target
* use sentinel files for prep-done if needed